k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-nspc
  namespace: app-nspc
  labels:
    app: app-nspc
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-nspc
  template:
    metadata:
      labels:
        app: app-nspc
        version: v1
    spec:
      imagePullSecrets:
        - name: ycr-secret
      containers:
        - name: app-nspc
          image: cr.yandex/b1g0m0akubo6l695q6df/app-nspc:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
