k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-nspc
  namespace: app-nspc
  labels:
    app: app-nspc
spec:
  selector:
    app: app-nspc
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
